@@ -893,5 +893,13 @@ Added conftest.py file with fixtures for pytest.
 Added mock_input() fixture.
 Implemented tests for bm.remove_duplicate() function.
 
+
+*****  Fri Jan 18 00:22:30 CET 2019  *****
+
+Implemented mock_init() fixture (which uses mock_home), to really
+make sure that each test starts from sratch in isolation.
+
+Implemented tests for bm.save(), bm.load(), and bm.export().
+
 *****
 
